Fixes  Brackets and adds more endpoint support
